* v.2.1.3  
   - added makeFarm, makePipe, makeMap, makeMasterWorker, ...
   - move constructor added in several classes (yet to be completed)
   - Divide&Conquer pattern implementation (DAC)
   - ffStats produces energy consumption statistics by using Mammut (MAchine Micro Management UTilities -- http://danieledesensi.github.io/mammut/)
   - multi-input/output node management improved
   - improved REPARA layer
* v.2.1.2 
   - possibility to switch between BLOCKING and NON-BLOCKING mode at run-time
   - minor improvements for the OpenCL support
   - minor enhancement of the fastflow statistics
   - improved REPARA KERNEL LAYER support
* v.2.1.1  (not released)
   - minor fixes
* v.2.1.0
   - improved cmake compilation
   - ff_tpcnode and ff_tpcallocator added
   - added FPGA and DSP support through the ThreadPoolComposer (TPC) framework
     developed by Andreas Koch's group at Technical University of Darmstadt (TUD). 
* v.2.0.9 (not released)
   - removed almost all explicit atomic operations based on assembler code and added 
     support to C++11 atomic operations
   - nodeInit and nodeEnd added in the ff_node class as virtual methods
   - added ff_selectNode, a simple pattern for selecting between different ff_node
   - stencilReduceOCL used for map, reduce and map-reduce
   - OpenCL support completely re-implemented
* 10/06/15 - v.2.0.8
   - added BLOCKING_MODE compile time optione. Now it is possible to select 
     a blocking run-time. The default mode is unblocking.
* - v.2.0.7 (not released)
   - new high level interface for pipeline and farm: ff_Pipe, ff_Farm
   - revised ff_taskf pattern
   - added some new tests
* 15/11/14 - v.2.0.6
   - removed warnings when compiling with clang
   - fixed a problem in the ff_mapOCL
   - introduced "explicit" for some constructors in order to prevent the compiler
     to use implicit conversions
   - fixed problems in the fftree usage   
* 22/08/14 - v.2.0.5